@@ -1,5 +1,7 @@
 1.2.3 (unreleased)
 ======
+* Protect `_on_key_frame` from being modified
+  by the GC.
 
 1.2.2 (2025-02-04)
 ======
